fix: production sanitation (sales cors, payroll pdf/tenant, catalog branches)